add sendShipmentNotification function