@@ -129,7 +129,7 @@ public class OrderService {
                 ProductDB.increaseProductAmount(orderProduct.getSerialNumber(), orderProduct.getAmount());
             }
             accountService.addToAccount(orderQueue.get(0).getCustomer().getID(), calcutateOrder(orderProducts));
-            orderQueue.removeFirst();
+            orderQueue.remove(0);
         }
         OrderDB.deleteOrder(orderID);
     }
